# roboticPickNPlace

./: .gitignore  README.md
assets/: workspace.tsv
documentation/: arm_controller.md  bringup.md  controller.md  dl_perception_interfaces.md  mapping.md  motion_planning.md  object_detection.md  system.md  template.md
scripts/: lets_go.bash  lidar_set_udev.sh  record_bag.sh
src/arm_controller/: package.xml  setup.py
src/arm_controller/arm_controller/: inverse_kinematics.py  joystick_controller.py  open_loop_controller.py
src/bringup/: package.xml  setup.py
src/bringup/configs/: arm_cam.yaml  arm_cam_ros_params.yaml
src/bringup/launch/: arm_cam_launch.py  chassis_launch.py  detection_launch.py  hand_control_car_launch.py  lidar_launch.py  realsense_launch.py  robo_arm_ik_launch.py  robo_arm_joy_launch.py  robo_arm_open_launch.py  sensors_launch.py  view_launch.py
src/bringup/rviz/: basic.rviz
src/controller/: package.xml  setup.py
src/controller/controller/: cartesian_controller.py  open_loop_controller.py  target_position_controller.py
src/dd2419_simulation/: package.xml  setup.cfg  setup.py
src/dd2419_simulation/dd2419_simulation/: simulation_node.py
src/dd2419_simulation/launch/: simulation_launch.py
src/dd2419_simulation/rviz/: simulation.rviz
src/dd2419_simulation/world/: simulation.world
src/decision/: package.xml  setup.py
src/decision/decision/: ms1_go_to_obj_node.py  ms1_go_to_obj_node_v2.py  ms1_pick_and_place_node.py  ms2_decision_tree_node.py  ms2_go_to_obj_planning_node.py  (+2 more)
src/dl_perception_interfaces/: CMakeLists.txt  package.xml
src/mapping/: package.xml  setup.py
src/motion_planning/: package.xml  setup.py
src/object_detection/: package.xml  setup.py
src/object_detection/launch/: aruco_detector_arm_camera_launch.py  aruco_detector_launch.py
src/object_detection/object_detection/: display_markers.py  dl_detection.py  dl_object_classifier.py  dl_postprocessor.py  object_detection.py
src/object_detection/object_detection/dl_detection_model_weights/: detector.py  merge_json_train_val.py  test_inference.py  train.py  utils.py
src/odometry/: package.xml  setup.py
src/robp_robot/: .gitmodules  README.md
src/robp_robot/robp_phidgets/robp_phidgets_motors/: CMakeLists.txt
src/robp_robot/robp_phidgets/robp_phidgets_motors/include/robp_phidgets_motors/: motor.hpp  motors.hpp
src/robp_robot/robp_phidgets/robp_phidgets_motors/launch/: motors_launch.py
src/robp_robot/robp_phidgets/robp_phidgets_motors/src/: motor.cpp  motors.cpp
src/rplidar_ros/: README.md
(+41 files in other folders)
